config-root/namespaces/jx/ibm-mobilefoundation-dev-mfp8-jx/mfp8-jx-ibm-mobilefoundation-dev-svc.yaml
# Source: ibm-mobilefoundation-dev/templates/service.yaml
###############################################################################
# Licensed Materials - Property of IBM.
# Copyright IBM Corporation 2018. All Rights Reserved.
# U.S. Government Users Restricted Rights - Use, duplication or disclosure
# restricted by GSA ADP Schedule Contract with IBM Corp.
#
# Contributors:
# IBM Corporation - initial API and implementation
###############################################################################
apiVersion: v1
kind: Service
metadata:
  name: mfp8-jx-ibm-mobilefoundation-dev
  labels:
    app.kubernetes.io/name: mfp8-jx-ibm-mobilefoundation-dev
    helm.sh/chart: ibm-mobilefoundation-dev-1.2.0
    release: "mfp8-jx"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "mfp8-jx"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx
spec:
  type: NodePort
  ports:
    - port: 9080
      targetPort: 9080
      protocol: TCP
      name: http
    - port: 9443
      targetPort: 9443
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: mfp8-jx-ibm-mobilefoundation-dev
    release: mfp8-jx
