config-root/namespaces/jx/ibm-mobilefoundation-dev-mfp8-jx/mfp8-jx-ibm-mobilefoundation-dev-ingress.yaml
# Source: ibm-mobilefoundation-dev/templates/ingress.yaml
###############################################################################
# Licensed Materials - Property of IBM.
# Copyright IBM Corporation 2018. All Rights Reserved.
# U.S. Government Users Restricted Rights - Use, duplication or disclosure
# restricted by GSA ADP Schedule Contract with IBM Corp.
#
# Contributors:
# IBM Corporation - initial API and implementation
###############################################################################
apiVersion: networking.k8s.io/v1beta1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mfp8-jx-ibm-mobilefoundation-dev
  labels:
    helm.sh/chart: "ibm-mobilefoundation-dev-1.2.0"
    app.kubernetes.io/name: mfp8-jx-ibm-mobilefoundation-dev
    app.kubernetes.io/instance: "mfp8-jx"
    release: "mfp8-jx"
    app.kubernetes.io/managed-by: "Helm"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    ingress.kubernetes.io/client-max-body-size: "200m"
    nginx.ingress.kubernetes.io/client-max-body-size: "200m"
    ingress.kubernetes.io/proxy-read-timeout: "300s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300s"
    ingress.kubernetes.io/proxy-connect-timeout: "300s"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300s"
    ingress.bluemix.net/client-max-body-size: "200m"
    ingress.bluemix.net/proxy-read-timeout: "300s"
    ingress.bluemix.net/proxy-connect-timeout: "300s"
    ingress.kubernetes.io/proxy-body-size: "200m"
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
    ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
  namespace: jx
spec:
  rules:
    - http:
        paths:
          - path: /mfpconsole
            backend:
              serviceName: mfp8-jx-ibm-mobilefoundation-dev
              servicePort: 9443
          - path: /mfp
            backend:
              serviceName: mfp8-jx-ibm-mobilefoundation-dev
              servicePort: 9443
          - path: /imfpush
            backend:
              serviceName: mfp8-jx-ibm-mobilefoundation-dev
              servicePort: 9443
          - path: /mfpadmin
            backend:
              serviceName: mfp8-jx-ibm-mobilefoundation-dev
              servicePort: 9443
          - path: /mfpadminconfig
            backend:
              serviceName: mfp8-jx-ibm-mobilefoundation-dev
              servicePort: 9443
          - path: /doc
            backend:
              serviceName: mfp8-jx-ibm-mobilefoundation-dev
              servicePort: 9443
          - path: /analytics
            backend:
              serviceName: mfp8-jx-ibm-mobilefoundation-dev
              servicePort: 9443
          - path: /analytics-service
            backend:
              serviceName: mfp8-jx-ibm-mobilefoundation-dev
              servicePort: 9443
          - path: /analytics-receiver
            backend:
              serviceName: mfp8-jx-ibm-mobilefoundation-dev
              servicePort: 9443
          - path: /mfpliveupdate
            backend:
              serviceName: mfp8-jx-ibm-mobilefoundation-dev
              servicePort: 9443
          - path: /appcenterconsole
            backend:
              serviceName: mfp8-jx-ibm-mobilefoundation-dev
              servicePort: 9443
